# msquic-relay

./: .gitignore  README.md
include/: tunnel_protocol.h
relay/: meson.build  relay.c
scripts/: run_relay.sh  setup_relay.sh
shim/: Makefile  shim.c  test_loopback.py
